UPDATE: minor adjustments in multiple files, sass and jsx

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -19,3 +19,16 @@ button {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+}
+
+a:active {
+  color: white;
+}
