UPDATE: change component league and calendar to views

--- a/src/components/Team/styles.scss
+++ b/src/components/Team/styles.scss
@@ -18,3 +18,15 @@
   cursor: pointer;
   filter: drop-shadow(1px 1px #222);
 }
+
+.card {
+  max-width: 100px;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.media {
+  width: 100px;
+  height: 100px;
+}
