--- a/src/components/Game/styles.scss
+++ b/src/components/Game/styles.scss
@@ -1,12 +1,3 @@
-.games {
-  display: flex;
-}
-
-.card-game {
-  width: 200px;
-  margin: 20px;
-}
-
 .logo-score {
   display: flex;
   justify-content: center;
@@ -32,4 +23,10 @@
   text-align: center;
   font-size: 12px;
   font-family: 'Electrolize' !important;
+  margin-top: 30px;
+}
+
+.fixture {
+  border: 1px solid #ccc;
+  margin-bottom: 50px;
 }
