--- a/src/components/Team/styles.scss
+++ b/src/components/Team/styles.scss
@@ -1,9 +1,3 @@
-.team-logo {
-  max-width: 100px;
-  cursor: pointer;
-  filter: drop-shadow(5px 5px 5px #222);
-}
-
 .star {
   cursor: pointer;
 }
@@ -20,13 +14,22 @@
 }
 
 .card {
-  max-width: 100px;
+  width: 100%;
   cursor: pointer;
   margin-left: 10px;
   margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.containerFavorite {
+  justify-content: center;
 }
 
 .media {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  min-height: 150px;
+  max-height: 200px;
+  margin-top: 5px;
+  justify-content: center;
 }
